- Fixed HibernateDAOTests not running when using "mvn test" (Thanks to dan1st from discordjug.net!) - Made the dao field static in HibernateDAOTests to let JUnit instantiate it only once, instead of before every test